# alfred-search-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  query.graphql
db/: gh_repos.db
migrations/: 1661978405013_repos.sql  1677759854026_crates.sql
src/: alfred.rs  config.rs  crate_client.rs  db_client.rs  gh_client.rs  main.rs  spawn_daemon.rs
