[package]
name = "gh-alfred-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap ={version="3.1.8", features=["derive"]}
env_logger = "0.9.0"
graphql_client ={version="0.10.0", features=["reqwest-blocking"]}
log = "0.4.16"
reqwest = {version="0.11.10", features=["json", "blocking"]}
serde = "1.0.136"
