
[package]
name = "alfred-search-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-stream = "0.3.3"
chrono ={version="0.4.22", features=["serde"]}
clap ={version="3.1.8", features=["derive"]}
confy = "0.4.0"
dotenvy = "0.15.3"
env_logger = "0.9.0"
flexi_logger = "0.23.1"
fork = "0.1.20"
futures = "0.3.24"
graphql_client ={version="0.10.0", features=["reqwest"]}
log = "0.4.16"
nix = "0.25.0"
reqwest = {version="0.11.10", features=["json",  "gzip"]}
serde = "1.0.136"
serde_json = "1.0.85"
sqlx ={version="0.6.1", features=["sqlite", "runtime-tokio-native-tls"]}
tokio ={ version="1.20.1", features=["macros"]}
tokio-stream ={version="0.1.9", features=["net"]}

